[tool.poetry]
name = "funcnodes-bt100-3j"
version = "0.1.0"
description = "funcnodes controller for the longer bt100-3j pump"
authors = ["Julian Kimmig <julian.kimmig@gmx.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"
funcnodes = "^0.1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
